--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,9 +1,174 @@
-.carousel-item {
-  height: 100vh;
-  min-height: 350px;
-  background: no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+
+body{
+    background-color: #f1f1f1;
+    font-family:"Noto Sans","Lucida Grande","Lucida Sans","Segoe UI",sans-serif;
+    font-weight:normal;
+    line-height:1.6;
+    color:#505561;
+}
+
+.section {
+    
+}
+
+input[type=text], select, textarea {
+  width: 80%;
+  padding: 20px;  
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=submit] {
+  background-color: #505561;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #6F9FD8;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+#intro{
+    position:relative;
+    text-align:center;
+    top:50px;
+}
+#site-header{
+    background-color:white;
+    position:fixed;
+    box-sizing:border-box;
+    top:0;
+    left:0;
+    right:0;
+    opacity: 0.9;
+    text-align:center;
+    font-weight:400;
+    font-family: 'Nunito', sans-serif;
+}
+#site-header .site-header-toprow{
+    padding:10px 10px 0;
+    height:40px;
+    box-shadow:0 2px rgba(0,0,0,0.05);
+    position:relative;
+}
+#site-header .site-header-toprow .site-logo{
+    position:absolute;
+    left:15px;
+    text-decoration:none;
+    color:#333;
+    margin-top:-5px;
+    float:left;
+    height:26px;
+    width:auto;
+    font-size:26px;
+    font-weight: 700;
+}
+#site-header .menu-icon{
+    display:none;
+}
+#site-header #site-nav .site-nav-wrapper{
+    display:inline-block;
+    font-size:.95em;
+    margin-top:4px;
+}
+#site-header #site-nav a{
+    display:inline-block;
+    color:#4c4c4c;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    border-bottom:3px solid rgba(239,57,57,0);
+    text-decoration:none;
+    margin:0 10px;
+    position:relative;
+    float:left;
+    white-space:nowrap;
+}
+#site-header #site-nav a:hover{
+    color:#6F9FD8;
+}
+#site-header #site-nav a.active{
+    color:#6F9FD8;
+    font-weight:700;
+}
+#site-header #site-nav a+a::before{
+    content:"|";
+    position:absolute;
+    left:-12px;
+    color:#dbdbdb;
+}
+#site-header #site-nav:after{
+    content:"";
+    display:block;
+    clear:both;
+}
+
+@media (max-width:800px){
+    #site-header .site-header-toprow{
+        text-align:right;
+    }
+    #site-header #site-nav{
+        position:relative;
+        display:inline-block;
+    }
+    #site-header #site-nav .site-nav-wrapper{
+        font-size:1em;
+        position:absolute;
+        right:0;
+        top:30px;
+        min-width:140px;
+        float:none;
+        border-radius:4px;
+        background-color:rgba(255,255,255,0.95);
+        box-shadow:inset 0 0 1px 0 rgba(0,0,0,0.5),0 2px 3px rgba(0,0,0,0.2);
+        padding:6px 0 4px;
+        display:none;
+        margin:0;
+    }
+    #site-header #site-nav a{
+        display:block;
+        float:none;
+        height:auto;
+        text-align:left;
+    }
+    #site-header #site-nav a+a::before{
+        content:none;
+    }
+    #site-header #site-nav .menu-icon{
+        line-height:0;
+        padding:0;
+        margin:8px;
+        border-width:0;
+        border-radius:3px;
+        opacity:.5;
+    }
+    #site-header #site-nav .menu-icon svg{
+        padding:15px 10px 5px 10px;
+        height:19px;
+        width:19px;
+        fill:gray;
+    }
+    #site-header #site-nav:hover .menu-icon,#site-header #site-nav:focus .menu-icon,#site-header #site-nav:active .menu-icon{
+        background-color:white;
+    }
+    #site-header #site-nav:hover .site-nav-wrapper,#site-header #site-nav:focus .site-nav-wrapper,#site-header #site-nav:active .site-nav-wrapper{
+        display:block;
+    }
+}
+@media (min-width:800px){
+    #site-header #site-nav .menu-icon{
+        display:none;
+    }
 }
