--- a/assets/custom.css
+++ b/assets/custom.css
@@ -11,6 +11,10 @@ body{
     
 }
 
+label {
+    font-size: 1.2em;
+}
+
 input[type=text], select, textarea {
   width: 80%;
   padding: 20px;  
@@ -21,6 +25,18 @@ input[type=text], select, textarea {
   margin-bottom: 16px;
   resize: vertical
 }
+
+input[type=data] {
+  width: 80%;
+  padding: 20px;  
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+data number
 
 input[type=submit] {
   background-color: #505561;
