--- a/assets/custom.css
+++ b/assets/custom.css
@@ -172,3 +172,26 @@ input[type=submit]:hover {
         display:none;
     }
 }
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: rgba(255, 255, 255, 1);
+  margin: 16px 16px 16px 16px;
+  display: grid;
+ grid-template-rows: max-content 200px 1fr;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
