--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #f1f1f1;
     font-family:"Noto Sans","Lucida Grande","Lucida Sans","Segoe UI",sans-serif;
@@ -41,11 +40,16 @@ input[type=submit]:hover {
   padding: 20px;
 }
 
-#intro{
+#intro {
     position:relative;
     text-align:center;
     top:50px;
 }
+
+#appcards {
+    margin: 50px auto 0;
+}
+
 #site-header{
     background-color:white;
     position:fixed;
@@ -194,4 +198,12 @@ input[type=submit]:hover {
 
 .container {
   padding: 2px 16px;
+}
+
+.cards {
+    display: inline-block;
+}
+
+.card-spacer {
+    margin-left: 15px;
 }
