--- a/assets/custom.css
+++ b/assets/custom.css
@@ -27,6 +27,10 @@ img {
     text-align: center
 }
 
+.dark {
+    background-color: #A5ADBA
+}
+
 input[type=text],
 select,
 textarea {
@@ -57,12 +61,22 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    margin-bottom: 20px;
+}
+
+.app-title {
+    font-weight: bold;
+    font-family: "Nunito", "sans-serif";
 }
 
 #intro {
     position: relative;
     text-align: center;
     top: 50px;
+}
+
+#footer {
+    padding: 10px;
 }
 
 #appcards {
@@ -80,7 +94,7 @@ input[type=submit]:hover {
     margin: 0px;
     margin-bottom: 30px;
     padding: 0px;
-    font-family: monospace;
+    font-family: 'Nunito', monospace;
 }
 
 #down {
