--- a/assets/custom.css
+++ b/assets/custom.css
@@ -10,7 +10,8 @@ body a {
     color: #505561;
 }
 
-img {
+
+.app-image {
     border-radius: 15px;
     border-style: solid;
     border-width: 2px;
@@ -21,15 +22,30 @@ img {
     z-index: 1;
 }
 
+.intro {
+    top: 50px
+}
+
 .section-header {
     width: 100%;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
+.carousel-item {
+    min-height: 350px;
+}
+
+.carousel-app-image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
 .text-center {
     text-align: center
 }
+
 input[type=text],
 select,
 textarea {
@@ -72,6 +88,7 @@ input[type=submit]:hover {
 .container .dark {
     background-color: #A5ADBA
 }
+
 .dark {
     background-color: #A5ADBA
 }
@@ -89,7 +106,7 @@ input[type=submit]:hover {
     text-decoration: underline;
 }
 
-#intro {
+#contact {
     position: relative;
     text-align: center;
     top: 50px;
