--- a/assets/custom.css
+++ b/assets/custom.css
@@ -135,11 +135,11 @@ input[type=submit]:hover {
 }
 
 .splash-light {
-    color: #b4b9c1;
+    color: #F5F5F5;
 }
 
 .splash-dim {
-    color: #9ca0a8;
+    color: #F5F5F5;
 }
 
 #down {
