--- a/assets/custom.css
+++ b/assets/custom.css
@@ -117,7 +117,7 @@ input[type=submit]:hover {
     text-decoration: underline;
 }
 
-#contact {
+#content {
     position: relative;
     text-align: center;
     top: 50px;
